--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,14 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   google_fonts: ^2.1.0
 
 dev_dependencies:
@@ -44,6 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/login.png
+  - assets/files/catlog.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
